--- a/next3-28/notebook/app/style.css
+++ b/next3-28/notebook/app/style.css
@@ -285,7 +285,14 @@ ul.notes-list {
   padding: 36px 16px 16px;
   display: flex;
   align-items: center;
+  flex-wrap: nowrap;     /*禁止子项换行 */
+  flex-shrink: 0;  /*防止图标被压缩*/ 
 }
+
+.sidebar--header strong {
+  white-space: nowrap;   /* 防止文字换行 */
+} 
+
 .sidebar-menu {
   padding: 0 16px 16px;
   display: flex;
@@ -381,8 +388,8 @@ ul.notes-list {
   width: 10px;
   height: 10px;
 }
-
-.sidebar-note-excerpt {
+/* .sidebar-note-excerpt */
+.sidebar-note-expect {
   pointer-events: none;
   z-index: 2;
   flex: 1 1 250px;
